syntax="proto3";

package supportticket;

service SupportTicket {
  // Ticket CRUD
  rpc CreateTicket(CreateTicketRequest) returns (TicketResponse) {}
  rpc GetTicket(GetTicketRequest) returns (TicketResponse) {}
  rpc ListTickets(ListTicketsRequest) returns (ListTicketsResponse) {}
  rpc ListTicketActivity(ListTicketActivityRequest) returns (ListTicketActivityResponse) {}

  // Ticket Updates
  rpc AddComment(AddCommentRequest) returns (CommentResponse) {}
  rpc AssignTicket(AssignTicketRequest) returns (TicketResponse) {}
  rpc TransitionStatus(TransitionStatusRequest) returns (TicketResponse) {}
  rpc UpdatePriority(UpdatePriorityRequest) returns (TicketResponse) {}
  rpc UpdateType(UpdateTypeRequest) returns (TicketResponse) {}
  rpc LockTicket(LockTicketRequest) returns (TicketResponse) {}

  // Internal for gateway health
  rpc CheckHealth(Empty) returns (Empty) {}
}

message ListTicketActivityRequest {
  string ticketId = 1; 
}
message ListTicketActivityResponse {
  repeated TicketActivity activities = 1;
}
// message TicketActivity {
//   string id = 1;
//   string actor = 2;
//   string type = 3;
//   string timestamp = 4;

//   oneof meta {
//     CreatedActivity created = 5;
//     LockedActivity locked = 6;
//     AssignedActivity assigned = 7;
//     StatusChangedActivity status_changed = 8;
//     PriorityChangedActivity priority_changed = 9;
//     CommentAddedActivity comment_added = 10;
//   }
// }
message TicketActivity {
  string id = 1;
  string actor = 2;
  string type = 3;
  string timestamp = 4;
  Meta meta = 5;
}
message Meta {
  oneof data {
    CreatedActivity created = 1;
    LockedActivity locked = 2;
    AssignedActivity assigned = 3;
    StatusChangedActivity statusChanged = 4;
    PriorityChangedActivity priorityChanged = 5;
    CommentAddedActivity commentAdded = 6;
  }
}

message CreatedActivity {
  string createdBy = 1;
}

message LockedActivity {
  bool locked = 1;
}

message AssignedActivity {
  string assignee = 1;
}

message StatusChangedActivity {
  string from = 1;
  string to = 2;
}

message PriorityChangedActivity {
  string from = 1;
  string to = 2;
}

message CommentAddedActivity {
  string body = 1;
}

message Empty {}

message Ticket {
  string id = 1;
  string ticketNo = 2;
  string orgId = 3;
  string title = 4;
  string description = 5;
  string createdByUserId = 6;
  string assigneeUserId = 7; 
  string status = 8;
  string priority = 9;
  string type = 10;
  bool locked = 11;
  string createdAt = 12;
  string updatedAt = 13;
}

message Comment {
  string id = 1;
  string ticketId = 2;
  string orgId = 3;
  string authorUserId = 4;
  string body = 5;
  string createdAt = 6;
}

message CreateTicketRequest {
  string orgId = 1;
  string orgName = 2;
  string title = 3;
  string description = 4;
  string priority = 5;
  string type = 6;
  string createdByUserId = 7;
  string userEmail = 8;
  string userName = 9;
}

message TicketResponse { Ticket ticket = 1; }

message GetTicketRequest { string orgId = 1; string ticketId = 2; }

message UserContext {
  string userId = 1;
  string role = 2;
}

message ListTicketsRequest {
  string orgId = 1;
  repeated string status = 2; 
  repeated string priority = 3; 
  string assigneeUserId = 4; 
  // string createdByUserId = 5;
  repeated string type = 5;
  int32 limit = 6; // pagination
  string cursor = 7; // pagination

   UserContext actor = 8; // caller
}

message ListTicketsResponse {
  repeated Ticket tickets = 1;
  string nextCursor = 2;
}

message AddCommentRequest {
  string orgId = 1;
  string ticketId = 2;
  string body = 3;
  string authorUserId = 4;
}

message CommentResponse { Comment comment = 1; }

message AssignTicketRequest {
  string orgId = 1;
  string ticketId = 2;
  string assigneeUserId = 3;
  string actorUserId = 4; 
}

message TransitionStatusRequest {
  string orgId = 1;
  string ticketId = 2;
  string newStatus = 3; 
  string actorUserId = 4;
}

message UpdatePriorityRequest {
  string orgId = 1;
  string ticketId = 2;
  string newPriority = 3;
  string actorUserId = 4;
}

message UpdateTypeRequest {
  string orgId = 1;
  string ticketId = 2;
  string newType = 3;
  string actorUserId = 4;
}

message LockTicketRequest {
  string orgId = 1;
  string ticketId = 2;
  bool lock = 3; // true = lock, false = unlock
  string actorUserId = 4;
}
